<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_item_my_sales"
            android:icon="@drawable/ico_minhas_vendas"
            android:title="@string/my_sales"
            app:actionLayout="@layout/menu_counter"
            app:showAsAction="ifRoom|collapseActionView" />

        <item
            android:id="@+id/nav_item_my_products"
            android:icon="@drawable/ico_meus_produtos"
            android:title="@string/my_products"
            app:actionLayout="@layout/menu_counter" />

        <item
            android:id="@+id/nav_item_affiliates"
            android:icon="@drawable/ico_afiliados"
            android:enabled="false"
            android:title="@string/affiliates"
            app:actionLayout="@layout/menu_counter" />

        <item
            android:id="@+id/nav_item_msgs"
            android:icon="@drawable/ico_mensagens"
            android:title="@string/msgs"
            app:actionLayout="@layout/menu_counter" />

        <item
            android:id="@+id/nav_item_notifications"
            android:icon="@drawable/ico_notificacoes"
            android:title="@string/notifications"
            app:actionLayout="@layout/menu_counter" />

        <item
            android:id="@+id/nav_item_my_profile"
            android:icon="@drawable/ico_minha_conta"
            android:checked="true"
            android:title="@string/my_profile"
            app:actionLayout="@layout/menu_counter" />

    </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_item_about_app"
            android:icon="@drawable/ico_sobre_o_app"
            android:title="@string/about_app"
            app:actionLayout="@layout/menu_counter" />

    </group>
</menu>